# darksoulsiii-practice-tool

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  ISSUES.txt  README.md  TROUBLESHOOTING.md  build.py  jdsd_dsiii_practice_tool.toml  justfile  package.py  values.yml
.cargo/: config  config.toml
.github/workflows/: build.yml  test.yml
ccs-mod/: Cargo.toml
ccs-mod/src/: lib.rs  main.rs
ccs-mod/src/params/: mod.rs  param_data.rs
extra/: windows.rc
hudhook/: Cargo.toml
hudhook/examples/: directory.rs  hook_ds3.rs  hook_me.rs  hook_you.rs  unhook.rs
hudhook/src/: inject.rs  lib.rs  mh.rs
hudhook/src/hooks/: dx11.rs
hudhook/src/hooks/dx11/: mod.rs
imgui-dx11/: Cargo.toml  imgui.ini
imgui-dx11/examples/: hello_world.rs
imgui-dx11/src/: buffers.rs  device_and_swapchain.rs  lib.rs  render_engine.rs  shader_program.rs  texture.rs
lib/data/: PARAM-TINKERER.txt  RELEASE-README.txt
lib/elden-ring-practice-tool/: Cargo.toml
lib/elden-ring-practice-tool/src/: lib.rs  main.rs
lib/hudhook/: Cargo.toml
lib/hudhook/src/: inject.rs  lib.rs  mh.rs
lib/hudhook/src/hooks/: dx11.rs  dx12.rs
lib/imgui-dx12/: Cargo.toml
lib/imgui-dx12/examples/: hello_world.rs
lib/imgui-dx12/src/: lib.rs
lib/libds3/: Cargo.toml
lib/libds3/src/: lib.rs  memedit.rs  pointers.rs  version.rs
lib/libds3/src/codegen/: base_addresses.rs  mod.rs
lib/libds3/src/params/: mod.rs  param_data.rs  param_names.json
lib/macro-param/: Cargo.toml
lib/macro-param/examples/: example.rs
lib/macro-param/src/: lib.rs
lib/no-logo/: Cargo.toml  build.rs  patterns.py  patterns.txt
lib/no-logo/src/: lib.rs
lib/param-mod/: Cargo.toml  exports.def  param-mod.toml
lib/param-mod/src/: lib.rs
lib/param-tinkerer/: Cargo.toml
lib/param-tinkerer/src/: lib.rs  main.rs
lib/scripts/: README.md
lib/scripts/base-ptr-codegen/: Cargo.toml
lib/scripts/base-ptr-codegen/src/: aobs.txt  bmh.rs  main.rs  read_module.rs
lib/scripts/memscan/: Cargo.toml
lib/scripts/memscan/src/: main.rs
lib/scripts/speedtrack/: Speedtrack.ipynb  data.txt  speedtrack.py
misc/: dinput8.rs  scanner.py
misc/old_version/commands/: flag.rs  position.rs  souls.rs
misc/param_codegen/: .gitignore  codegen_old.py  param_data.rs  paramdex_parser.py
misc/rtti/: regulationmanagerimp.txt
parked/: config_editor.rs  dinput8.rs  item_list.txt  item_list_parser.py  keys.py  savefile_manager.rs  treenav.rs  unload.py  utils.rs  wndproc.rs
parked/old_version/: palette.rs
parked/src/: memory.rs
parked/src/commands/: speed.rs
practice-tool/: Cargo.toml  build.rs
practice-tool/src/: config.rs  lib.rs  main.rs  memedit.rs  pointers.rs  pointers_old.rs  practice_tool.rs  resources.rc  style.rs  util.rs
practice-tool/src/util/: mod.rs  vk.rs
practice-tool/src/widgets/: character_stats.rs  config.rs  cycle_color.rs  cycle_speed.rs  flag.rs  group.rs  item_ids.json  item_spawn.rs  items.json  label.rs  mod.rs  nudge_pos.rs  open_menu.rs  param_edit.rs  position.rs  quitout.rs  savefile_manager.rs  savefile_manager_old.rs  souls.rs  target.rs
src/: base_addresses.rs  command_ui.rs  config.rs  lib.rs  main.rs  memory.rs  palette.rs  utils.rs
src/commands/: flag.rs  item_ids.rs  item_spawn.rs  mod.rs  position.rs  quitout.rs  savefiles.rs  souls.rs  speed.rs
src/dll/: config.cpp  config.h  dllmain.cpp  logging.cpp  logging.h  memory.cpp  memory.h  ui.cpp  ui.h
src/dll/imgui/: imgui_impl_dx11.h  imgui_impl_win32.cpp  imgui_impl_win32.h
src/injector/: injector.cpp  resources.rc
tests/: example_runner.rs
xtask/: Cargo.toml
xtask/codegen/: Cargo.toml
xtask/codegen/src/: aob_scans.rs  lib.rs  main.rs
xtask/codegen/src/item_list/: item_list_parser.py
xtask/misc/: notes.yml
xtask/src/: codegen.rs  dist.rs  main.rs  param_names.txt
xtask/src/codegen/: aob_scans.rs  codegen.py  mod.rs  params.rs
xtask/xtask/: Cargo.toml
xtask/xtask/src/: main.rs
xtask/xtask/src/codegen/: aob_scans.rs  codegen.py
