[workspace]
resolver = "2"
members = [
  "practice-tool", 
  "lib/libds3",
  "lib/macro-param",
  "lib/param-tinkerer",
  "lib/no-logo",
  "lib/param-mod",
  "lib/scripts",
  "xtask", 
]

[workspace.package]
version = "1.6.0"
authors = ["Andrea Venuta <venutawebdesign@gmail.com>"]

[profile.dev]
opt-level = 2
debug = 2

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[workspace.dependencies]
hudhook = "0.6.1"
imgui = "0.11.0"
imgui-sys = "0.11.0"
once_cell = "1.19.0"
parking_lot = "0.12.1"
practice-tool-core = { git = "https://github.com/veeenu/practice-tool-core", version = "0.1.0" }
# practice-tool-core = { path = "../../practice-tool-core/" }

[workspace.dependencies.windows]
version = "0.54.0"
features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
]

# [patch.'crates-io']
# hudhook = { path = "../hudhook" }
