[workspace]
resolver = "2"
members = [
  "practice-tool", 
  "lib/libds3",
  "lib/macro-param",
  "lib/param-tinkerer",
  "lib/no-logo",
  "lib/param-mod",
  "lib/scripts",
  "xtask", 
]

[workspace.package]
version = "1.6.3"
authors = ["Andrea Venuta <venutawebdesign@gmail.com>"]

[profile.dev]
opt-level = 2
debug = 2

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[workspace.dependencies]
imgui = "0.12"
once_cell = "1.19.0"
parking_lot = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
hudhook = { version = "0.7.0", features = ["dx11", "inject"], default-features = false }
practice-tool-core = { git = "https://github.com/veeenu/practice-tool-core", version = "0.1.0" }
practice-tool-tasks = { git = "https://github.com/veeenu/practice-tool-core", version = "0.1.0" }

[workspace.dependencies.windows]
version = "0.54.0"
features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_UI_Input_XboxController", 
]

# TODO: remove this once the fix to imgui-rs/imgui-rs#775 gets released.
[patch.'crates-io']
imgui = { git = "https://github.com/imgui-rs/imgui-rs", rev = "cb8beeb" }

# [patch.'crates-io']
# hudhook = { path = "../hudhook" }
#
[patch.'https://github.com/veeenu/practice-tool-core']
practice-tool-core = { path = "../practice-tool-core" }
practice-tool-tasks = { path = "../practice-tool-core/tasks" }
