[package]
name = "ccs_mod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
name = "ccs_mod"

[[bin]]
path = "src/main.rs"
name = "ccs_mod"

[dependencies]
hudhook = { path = "../lib/hudhook" }
log = "0.4.14"
simplelog = "0.8.0"
log-panics = "2.0.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.57"
winapi = { version = "0.3.9", features = ["winuser", "minwindef", "windef", "xinput"] }
regex = "1"
imgui = "0.8.0"
imgui-sys = "0.8.0"
widestring = "0.5.1"
parking_lot = "0.11.2"
hex = "0.4.3"
