[package]
name = "hudhook"
version = "0.1.0"
edition = "2021"

[[example]]
name = "hook_you"
crate-type = ["cdylib"]

[dependencies]
imgui-dx11 = { path = "../imgui-dx11" }
lazy_static = "1.4.0"
log = "0.4.14"
log-panics = "2.0.0"
once_cell = "1.8.0"
parking_lot = "0.11.2"
simplelog = "0.11.0"
widestring = "0.5.1"
winapi = { version = "0.3.9", features = [ "std", "d3d11", "dxgi", "d3dcompiler", "ntdef", "minwindef", "windef", "psapi", "memoryapi", "synchapi", "winuser", "processthreadsapi", "xinput", "libloaderapi", "winerror", "dxgidebug" ] }
windows = "0.21.1"

[build-dependencies]
cc = "1.0.72"
