[package]
name = "darksoulsiii-practice-tool"
version = "1.4.0"
authors = ["Andrea Venuta <venutawebdesign@gmail.com>"]
edition = "2021"

[[bin]]
name = "jdsd_dsiii_practice_tool"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "libjdsd_dsiii_practice_tool"

[dependencies]
libds3 = { path = "../lib/libds3" }
log-panics = "2.0.0"
toml = "0.5.6"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.57"
pkg-version = "1.0.0"
ureq = { version = "1.4.1", features = ["json"] }
windows = { version = "0.39.0", features = [
  "Win32_Foundation",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Threading"
] }
open = "1.4.0"
semver = "0.11.0"
regex = "1"
widestring = "0.5.1"
parking_lot = "0.11.2"
hex = "0.4.3"
const_format = "0.2.26"
dll-syringe = { git = "https://github.com/OpenByteDev/dll-syringe" }
hudhook.workspace = true
imgui.workspace = true
imgui-sys.workspace = true
tracing-subscriber = "0.3.17"
