[package]
name = "darksoulsiii-practice-tool"
version.workspace = true
authors.workspace = true
edition = "2021"

[[bin]]
name = "jdsd_dsiii_practice_tool"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "libjdsd_dsiii_practice_tool"

[dependencies]
libds3 = { path = "../lib/libds3" }
log-panics = "2.0.0"
toml = "0.5.6"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.57"
pkg-version = "1.0.0"
ureq = { version = "2.8.0", features = ["json"] }
open = "1.4.0"
semver = "0.11.0"
regex = "1"
widestring = "0.5.1"
parking_lot = "0.11.2"
hex = "0.4.3"
const_format = "0.2.26"
tracing-subscriber = "0.3.17"
hudhook.workspace = true
imgui.workspace = true
imgui-sys.workspace = true
once_cell.workspace = true
windows.workspace = true
practice-tool-core.workspace = true

[build-dependencies]
embed-resource = "2.4.1"
