[package]
name = "darksoulsiii-practice-tool"
version.workspace = true
authors.workspace = true
edition = "2021"

[[bin]]
name = "jdsd_dsiii_practice_tool"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "libjdsd_dsiii_practice_tool"

[dependencies]
const_format = "0.2.26"
hex = "0.4.3"
log-panics = "2.0.0"
open = "1.4.0"
parking_lot = "0.11.2"
pkg-version = "1.0.0"
regex = "1"
semver = "0.11.0"
toml = "0.5.6"
tracing-subscriber = "0.3.17"
ureq = { version = "2.8.0", features = ["json"] }
widestring = "0.5.1"

libds3 = { path = "../lib/libds3" }

serde.workspace = true
serde_json.workspace = true
hudhook.workspace = true
imgui.workspace = true
once_cell.workspace = true
windows.workspace = true
practice-tool-core.workspace = true

[build-dependencies]
embed-resource = "2.4.1"
