[package]
name = "xtask"
version.workspace = true
authors.workspace = true
edition = "2021"

[dependencies]
widestring = "0.5.1"
zip = "0.6"
regex = "1.5.5"
serde_json = "1.0.73"
dll-syringe = { git = "https://github.com/OpenByteDev/dll-syringe" }
rayon = "1.5.3"
heck = "0.4.0"
textwrap = "0.15.0"
dotenv = "0.15.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.winapi]
version = "0.3.9"
features = [
  "winuser",
  "winbase",
  "ntdef",
]

[dependencies.windows]
version = "0.42.0"
features = [
   "Win32_Foundation",
   "Win32_Security",
   "Win32_Storage_FileSystem",
   "Win32_System_Diagnostics_Debug",
   "Win32_System_Diagnostics_ToolHelp",
   "Win32_System_Threading",
]
