[package]
name = "elden-ring-practice-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "jdsd_er_practice_tool"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "libjdsd_er_practice_tool"

[dependencies]
hudhook = { path = "../hudhook" }
libds3 = { path = "../libds3" }
imgui = "0.8.0"
winapi = { version = "0.3.9", features = ["winuser", "minwindef", "windef", "xinput"] }
simplelog = "0.8.0"
log-panics = { version = "2.0.0", features = ["with-backtrace"] }
