[package]
name = "libds3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.8.0"
log = "0.4.14"
widestring = "0.5.1"
macro-param = { path = "../macro-param" }
winapi = { version = "0.3.9", features = ["winuser", "minwindef", "windef", "memoryapi"] }
