[package]
name = "libds3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui.workspace = true
log = "0.4.14"
widestring = "0.5.1"
macro-param = { path = "../macro-param" }
winapi = { version = "0.3.9", features = ["winuser", "minwindef", "windef", "memoryapi"] }
parking_lot = "0.11.2"
serde_json = "1.0.73"
[dependencies.windows]
version = "0.42.0"
features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_LibraryLoader",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
]
