[package]
name = "libds3"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
widestring = "0.5.1"
macro-param = { path = "../macro-param" }
serde_json = "1.0.73"
parking_lot.workspace = true
once_cell.workspace = true
windows.workspace = true
