[package]
name = "param-mod"
version = "0.1.0"
edition = "2021"

[lib]
name = "dinput8parammod"
crate-type = ["cdylib"]

[dependencies]
libds3 = { path = "../libds3" }
serde = { version = "1.0.147", features = ["derive"] }
toml = "0.5.9"

[dependencies.windows]
version = "0.51.0"
features = [
  "Win32_System_LibraryLoader",
  "Win32_Foundation",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_System_Services",
  "Win32_System_SystemServices",
  "Win32_System_Console",
  "Win32_UI_WindowsAndMessaging",
]
