[package]
name = "param-tinkerer"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
name = "jdsd_dsiii_param_tinkerer"

[dependencies]
libds3 = { path = "../libds3" }
hudhook.workspace = true
imgui.workspace = true
