[package]
name = "codegen"
edition = "2021"
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.4.1"
once_cell.workspace = true
pelite = "0.10.0"
rayon = "1.9.0"
regex =  "1.10.3"
serde_json = "1.0.114"
textwrap = "0.16.1"
